# xdsl-ccpp

./: .gitignore  DEVELOPERS.md  README.md  ccpp_cap_refactor_plan.md  ccpp_tool_comparison.md  duplication_analysis_summary.md  gen_advection  gen_capgen  gen_ddthost  gen_helloworld  gen_kessler  gen_kessler_bindc  gen_kessler_chost  multi_instance_plan.md  multilanguage_limitations.md  multilanguage_plan.md  pyproject.toml
.github/workflows/: compile-tests.yml  tests.yml
cmake/: xdsl_ccpp.cmake
examples/advection/: Makefile  advection_py.py  ccpp_scheme_utils.F90  cld_ice.F90  cld_liq.F90  test_advection_host_integration.F90
examples/advection_flat_host/: Makefile  README.md  ccpp_constituent_prop_mod.F90  cld_suite.xml  flat_host.F90  flat_host_data.F90  flat_host_mod.F90  test_flat_host_integration.F90
examples/atmospheric_physics/: suite_adiabatic_py.py  suite_cam4_py.py  suite_cam7_py.py  suite_gw_cam7_se_py.py  suite_held_suarez_1994_py.py  suite_kessler_py.py  suite_musica_py.py  suite_rrtmgp_py.py  suite_tj2016_py.py
examples/capgen/: CMakeLists.txt  Makefile  README.md
examples/capgen/host_cpp/: driver_capgen_chost.cpp
examples/capgen/scheme/: capgen_chost_suite.xml  capgen_py.py
examples/chararg/: Makefile  chararg.F90  chararg_suite.xml
examples/constadv/: Makefile  constadv.F90  constadv_suite.xml
examples/constprop/: Makefile  constprop.F90  constprop_suite.xml
examples/ddthost/: Makefile  ddthost_meta_py.py
examples/helloworld/: Makefile  README.md  hello_scheme.F90  hello_world_mod.F90  helloworld_py.py
examples/kessler/: Kessler_ccpp_chost_cap.F90  Kessler_ccpp_chost_cap.h  Makefile  driver_kessler_ccpp.F90  driver_kessler_cpp.cpp  driver_kessler_cxx_host.cpp  driver_kessler_old.F90  init_data_c.c  kessler_host_init_c.F90  kessler_host_mod.F90  kessler_py.py
examples/nestedddt/: Makefile  nestedddt.F90  nestedddt_suite.xml
examples/tinyddt/: Makefile  tinyddt.F90  tinyddt_suite.xml
examples/var_compat/: Makefile  README.md  effr_calc.F90  effr_diag.F90  effr_post.F90  effr_pre.F90  effrs_calc.F90  module_rad_ddt.F90  rad_lw.F90  rad_sw.F90  test_host.F90  test_host_data.F90  test_host_mod.F90  test_var_compat_host_integration.F90  var_compatibility_suite.xml
tests/: conftest.py
tests/unit/: conftest.py  helpers.py  test_arg_ownership_op.py  test_arg_ownership_pass.py  test_build_integration.py  test_cap_shared.py  test_capscratch_divergence.py  test_capscratch_residency.py  test_ccpp_cap.py  test_ccpp_t_threading.py  test_ccpp_track_variables.py  test_chost_ddt_error.py  test_chost_ddt_expand.py  test_datatable.py  test_ddt_member_residency.py  test_fparser2_to_meta.py  test_generate_meta.py  test_gpu_data_hoisting.py  test_gpu_directives.py  test_gpu_residency.py  test_host_var_match.py  test_nested_ddt.py  test_omp_directives.py  test_omp_hoisting.py  test_optional_args.py  test_resolved_arg_op.py  test_run_dispatch.py  test_subcycle.py  test_suite_arg_name_collision.py  test_suite_cross_scheme_unit_kind.py  test_suite_kinds.py  test_suite_owned_residency.py  test_suite_scalar_inout_intent.py  test_suite_variable_model.py  test_validate_fir.py
xdsl_ccpp/backend/: print_cpp_header.py  print_ftn.py
xdsl_ccpp/dialects/: ccpp.py  ccpp_utils.py
xdsl_ccpp/frontend/: ccpp_xml.py  py_api.py
xdsl_ccpp/tools/: ccpp_datatable.py  ccpp_dsl.py  ccpp_generate_meta.py  ccpp_opt.py  ccpp_track_variables.py  ccpp_validate_fir.py  ccpp_validate_source.py
xdsl_ccpp/transforms/: arg_ownership_pass.py  ccpp_cap.py  constituent_cap.py  cpp_interop.py  fir_to_meta.py  fparser2_to_meta.py  gpu_ccpp_cap_pass.py  gpu_data_pass.py  host_var_match_pass.py  lifecycle_cap.py  run_dispatch.py  suite_cap.py  suite_kinds.py  suite_meta.py  (+1 more)
(+89 files in other folders)
