[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "xdsl-ccpp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "xdsl==0.56.1",
]

[project.optional-dependencies]
dev = [
    "ruff",
    "filecheck",
    "pytest",
]
validate = [
    "fparser",
]

[project.scripts]
ccpp_xdsl = "xdsl_ccpp.tools.ccpp_dsl:main"
ccpp_prebuild = "xdsl_ccpp.tools.ccpp_prebuild:main"
fir2meta = "xdsl_ccpp.tools.fir2meta:main"
ccpp_validate = "xdsl_ccpp.tools.ccpp_validate_source:main"
ccpp_track_variables = "xdsl_ccpp.tools.ccpp_track_variables:main"
ccpp_datatable = "xdsl_ccpp.tools.ccpp_datatable:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py310"
extend-include = ["*.ipynb", "*.pyi"]
exclude = [".venv", "docs/marimo"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "PT", "TID251", "INP", "PYI"]
ignore = [
    "E741",   # https://beta.ruff.rs/docs/rules/ambiguous-variable-name/
    "PT006",  # https://beta.ruff.rs/docs/rules/pytest-parametrize-names-wrong-type/
    "PT012",  # https://beta.ruff.rs/docs/rules/pytest-raises-with-multiple-statements/
    "PYI041", # https://docs.astral.sh/ruff/rules/redundant-numeric-union
]

[tool.ruff.lint.pycodestyle]
max-line-length = 130

[tool.ruff.lint.mccabe]
max-complexity = 10
